# UA_MDM_Labo2

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
app/: EDAdashboard.py
notebooks/: 01_eda_tabulares.ipynb
